--- a/css/settings.css
+++ b/css/settings.css
@@ -22,4 +22,18 @@
 body {
     background: #F8F9FD;
     font-family: 'Play', sans-serif;
+    overflow-x: hidden;
+}
+
+.btn-main {
+    padding: 15px 20px;
+    background-color: var(--green);
+    border-radius: 8px;
+    color: white;
+    transition: 0.5s;
+    text-decoration: none;
+}
+
+.btn-main:hover {
+    box-shadow: 0px 0px 20px var(--green);
 }
