--- a/css/mobile.css
+++ b/css/mobile.css
@@ -41,4 +41,10 @@
         justify-content: space-between;
         gap: 10px;
     }
+
+    .header__right-button a {
+        font-size: 14px;
+        font-weight: 700;
+        padding: 10px 10px;
+    }
 }
