--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,18 +1,18 @@
 @media screen and (max-width: 900px) {
-    .consult__left h2{
+    .consult__left h2 {
         text-align: center;
     }
 
-    .consult__left p{
+    .consult__left p {
         text-align: center;
     }
 
-    .consult__left-img{
+    .consult__left-img {
         display: flex;
         justify-content: center;
     }
 
-    .consult__left-img img{
+    .consult__left-img img {
         max-width: 40px;
     }
 
@@ -27,8 +27,8 @@
         justify-content: center;
     }
 
-    .header__center img{
-       width: 90px;
+    .header__center img {
+        width: 90px;
     }
 
     .header__left {
@@ -59,19 +59,18 @@
     .hero__bottom {
         display: grid;
         justify-content: center;
-        
+
     }
 
-    .hero__bottom-item {
-       
-    }
+    .hero__bottom-item {}
 
     .hero__bottom-item:nth-child(2) p {
         order: -1;
         text-align: right;
     }
 
-    .hero__top-oneButton, .hero__top-twoButton {
+    .hero__top-oneButton,
+    .hero__top-twoButton {
         font-size: 14px;
         font-weight: 700;
         padding: 10px 10px;
