--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,7 @@
     max-width: 1104px;
     height: 467px;
     padding-bottom: 60px;
+    margin-bottom: 84px;
     padding-top: 33.3px;
     margin-left: auto;
     margin-right: auto;
