--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 
 /* slide */
 
+
 .menu-container {
     background-color: white;
     height: 100vh;
@@ -14,7 +15,7 @@
     position: absolute;
     right: 0;
     transform: translateX(1560px);
-    transition: 0.5s;
+    transition: transform ease 0.5s;
     z-index: 999;
 }
 
