--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
     height: 100vh;
     width: 440px;
     position: absolute;
+    display: none;
     right: 0;
     transform: translateX(1560px);
     transition: transform ease 0.5s;
