--- a/css/main.css
+++ b/css/main.css
@@ -589,6 +589,7 @@
     object-fit: cover;
     z-index: 9999999;
     position: relative;
+    transition: all 0.5s ease;
 }
 
 .mySwiper2 .swiper-slide-active img {
@@ -596,6 +597,7 @@
     height: 322px;
     opacity: 0.5;
     z-index: 1;
+    transition: all 0.5s ease;
 }
 
 .mySwiper2 .swiper-slide-next ~ .swiper-slide img {
@@ -603,6 +605,7 @@
     height: 322px;
     opacity: 0.5;
     z-index: 1;
+    transition: all 0.5s ease;
 }
 
 .mySwiper2 .swiper-slide-next ~ .swiper-slide ~ .swiper-slide {
