--- a/css/main.css
+++ b/css/main.css
@@ -396,11 +396,14 @@
     right: 30px;
     top: 42%;
     transform: translateY(-50%);
-    max-width: 59px;
-    max-height: 59px;
+    width: 59px;
+    height: 59px;
     border-radius: 50%;
     background: #EFB61E;
-    padding: 23px 21px 22px 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
     z-index: 999;
     cursor: pointer;
 }
@@ -418,11 +421,14 @@
     left: 30px;
     top: 42%;
     transform: translateY(-50%);
-    max-width: 59px;
-    max-height: 59px;
+    width: 59px;
+    height: 59px;
     border-radius: 50%;
     background: #EFB61E;
-    padding: 23px 21px 22px 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
     z-index: 999;
     cursor: pointer;
 }
@@ -538,11 +544,14 @@
     right: 25.5%;
     top: 50%;
     transform: translateY(-50%);
-    max-width: 59px;
-    max-height: 59px;
+    width: 59px;
+    height: 59px;
     border-radius: 50%;
     background: #EFB61E;
-    padding: 23px 21px 22px 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
     z-index: 999;
     cursor: pointer;
 }
@@ -559,12 +568,15 @@
     left: 31%;
     top: 50%;
     transform: translateY(-50%);
-    max-width: 59px;
-    max-height: 59px;
+    width: 59px;
+    height: 59px;
     border-radius: 50%;
     background: #EFB61E;
-    padding: 23px 21px 22px 22px;
     z-index: 999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
     cursor: pointer;
 }
 
@@ -577,7 +589,7 @@
     visibility: hidden;
 }
 
-.mySwiper2 .swiper__bottom-prev {
+.mySwiper2 .swiper__bottom-prev img {
     width: 16px;
     height: 14px;
     object-fit: cover;
