--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,12 @@
 
 
 /* HERO */
+#hero {
+    background-image: url(../assets/icons/image\ 66.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 50%;
+}
 .hero {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -226,16 +232,16 @@
 }
 
 .hero__bottom-item {
-    display: grid;
+    display: flex;
     justify-items: center;
-    text-align: center;
+    text-align: left;
     align-items: center;
+    gap: 10px;
 }
 
 .hero__bottom-item svg {
-    width: 150px;
-    height: 150px;
-    margin-top: -100px;
+    width: 50px;
+    height: 50px;
 }
 
 .hero__bottom-item p {
@@ -327,10 +333,19 @@
     font-style: normal;
     font-weight: 400;
     width: 355px;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 130%;
-    color: #5A5A5A;
     margin-bottom: 5px;
+}
+
+.about__list {
+    padding: 0;
+    list-style: square;
+    list-style: none;
+}
+
+.about__list-style {
+    text-decoration: none;
 }
 
 .about__link {
@@ -619,4 +634,34 @@
 .swiper__bottom-title {
     margin-top: 95px;
     margin-bottom: 53px;
+}
+
+.slider__top {
+    background-color: #E8E8E8;
+    padding-top: 60px;
+    padding-bottom: 30px;
+}
+
+.swiper-top  {
+    margin-bottom: 30px;
+}
+/* STEPS */
+#steps {
+    padding-top: 60px;
+}
+
+.steps__items {
+    margin-top: 40px;
+    columns: 2;
+    gap: 20px;
+
+}
+
+.steps__item {
+    padding: 10px;
+}
+
+.steps__item h5 {
+    font-size: 23px;
+    margin: 0;
 }
