--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,40 @@
 :root {
     --green: #849E87;
     --bg: #E3E2DE;
-    --yellow: ;
+    --yellow:#EFB61E  ;
     --gray: linear-gradient(127.17deg, #EFB61E -3.83%, #F4A115 108.77%);
 }
 
 /* slide */
 
+#menu {
+    display: flex;
+}
 
 .menu-container {
     background-color: white;
     height: 100vh;
     width: 440px;
     position: absolute;
-    display: none;
+    /* display: none; */
     right: 0;
     transform: translateX(1560px);
     transition: transform ease 0.5s;
     z-index: 999;
+}
+
+.menu__wrapper {
+    display: grid;
+    align-items: flex-start;
+    justify-content: center;
+    justify-items: center;
+    /* align-content: center; */
+    padding: 20px;
+    width: 100%;
+}
+.menu__wrapper img {
+    padding-top: 50px;
+    max-width: 120px;
 }
 
 .menu-container.active {
@@ -32,8 +49,106 @@
     transition: 0.5s;
 }
 
+.link-effect {
+    height: 10px;
+    width: 20px;
+    margin-left: -30px;
+    transition: 0.5s;
+    position: absolute;
+    z-index: 2;
+    background-color: transparent;
+}
+
+.navigation__list {
+    padding: 0;
+    list-style: none;
+    display: grid;
+    align-items: center;
+    justify-items: center;    
+}
+
+.navigation__list-item {
+    transition: 0.5s;
+    margin-bottom: 20px;
+    width: inherit;
+    display: flex;
+    align-items: center;
+}
+
+.navigation__list-link {
+    z-index: 3;
+}
+
+.navigation__list-item:hover {
+    transform: translateX(5px);
+    
+}
+
+.navigation__list-item:hover .link-effect{
+    transform: translateX(10px) ;
+    padding: 0 20px;
+    width: 100%;
+    position: absolute;
+    background-color: #849E87;
+    opacity: 50%;
+    
+}
+
+.navigation__list-item a {
+    font-size: 24px;
+    color: #000000;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.navigation__info {
+    text-align: center;
+}
+
 #close {
     cursor: pointer;
+    position: absolute;
+    right: 20px;
+}
+
+.close-icon {
+    background-color: var(--yellow);
+    width: 46px;
+    height: 45px;
+    border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+
+    transition: 0.5s;
+}
+
+.close-line1, .close-line2 {
+    position: absolute;
+    background-color: black;
+    width: 23px;
+    height: 3px;
+    transition: 0.3s;
+}
+.close-line1{
+    transform: rotate(45deg);
+}
+.close-line2{
+    transform: rotate(-45deg);
+}
+
+#close:hover .close-line1 {
+    transform: rotate(135deg);
+}
+
+#close:hover .close-line2 {
+    transform: rotate(-135deg);
+}
+
+#close:hover .close-icon {
+    box-shadow: 0px 0px 10px #F0B500;
 }
 
 .shadow.active {
