--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
     background-color: white;
     height: 100vh;
     width: 440px;
-    position: absolute;
+    position: fixed;
     /* display: none; */
     right: 0;
     transform: translateX(1560px);
