--- a/css/mobile.css
+++ b/css/mobile.css
@@ -238,6 +238,29 @@
         order: 1;
     }
 
+    .calc__right-top p{
+        font-size: 16px;
+    }
+    .calc__right-bottom p{
+        font-size: 16px;
+    }
+
+    .calc__right-bottomPlus p{
+        font-size: 16px;
+    }
+
+    .calc__right-bottomPlus label{
+        font-size: 20px;
+    }
+
+    .calc-m h2 {
+        font-size: 24px;
+        margin-bottom: 0;
+    }
+    .calc-m svg {
+        width: 40px;
+    }
+
     .calc__left {
         width: 100%;
     }
@@ -245,4 +268,22 @@
     .calc__right {
         width: 100%;
     }
+
+    .checkbox-input {
+        color: white;
+        font-size: 14px;
+    }
+    
+    .calc {
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0;
+        
+        
+    }
+
+    .calc__wrapper {
+        border-radius: 0;
+    }
+
 }
