--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
     --gray: linear-gradient(127.17deg, #EFB61E -3.83%, #F4A115 108.77%);
 }
 
+
 html {
     overflow-x: hidden !important;
 }
@@ -898,3 +899,43 @@ body {
     width: 120px;
     border: 0;
 }
+
+#rc-phone {
+    position: fixed; 
+    right: 30px; 
+    bottom: 20px; 
+    width: 50px; 
+    height: 50px; 
+    border-radius: 25px; 
+    z-index: 1000; 
+    margin: 0; 
+    overflow: hidden; 
+    transition: width cubic-bezier(0, 0, 0.15, 1.0) 0.5s;}  
+
+#rc-phone  #rc-phone-icon {
+    z-index: 100;
+     position: absolute; 
+     cursor: pointer; 
+     color: #fff; top: 0; 
+     width: 50px; 
+     height: 50px; 
+     line-height: 50px; 
+     text-align: center; 
+     font-size: 26px; 
+     border-radius: 50%; 
+     background: var(--yellow);; 
+     transition: all 0.3s;}
+#rc-phone  #rc-phone-icon:hover {background: var(--yellow);}
+
+#rc-phone #rc-phone-icon:before {position:absolute; top:50%; left:50%; transform: translate(-50%,-50%) rotate(0deg); transition: all 0.5s;}
+#rc-phone #rc-phone-icon:after {position:absolute; top:50%; left:50%; transform: translate(-50%,-50%) rotate(0deg); content: "\f00d"; opacity:0; transition: all 0.5s;}
+#rc-phone form {transform:translate(-100%,0); display: flex; align-items: center; border-radius: 25px; justify-content: space-between; width: 400px; height: 50px; padding: 0 15px 0 65px; position: relative; box-sizing: border-box; z-index: 10; background: #363f43; transition: transform cubic-bezier(0, 0, 0.15, 1.0) 0.5s;}
+#rc-phone form p {font-size: 12px; width: 80px; color: #fff; line-height: 120%;}
+#rc-phone form input {border-radius: 12px; width: 180px; height: 28px; background: #fff; color: #b2b2b2; margin: 0; padding: 0 0 0 25px; border: 1px solid #363f43; box-sizing: border-box;}
+#rc-phone form button {border: 0; color: #fff; width: 24px; height: 24px; padding: 0; line-height: 24px; text-align: center; font-size: 14px; box-sizing: border-box; background: var(--yellow);; cursor: pointer; border-radius: 50%;}
+#rc-phone form button:hover {color: #fff; background: var(--yellow);;}
+
+#rc-phone.open {width: 400px;}
+#rc-phone.open form {transform:translate(0,0)}
+#rc-phone.open #rc-phone-icon:after {opacity: 1; transform: translate(-50%,-50%) rotate(-360deg);}
+#rc-phone.open #rc-phone-icon:before {opacity: 0; transform: translate(-50%,-50%) rotate(-360deg);}
