--- a/css/mobile.css
+++ b/css/mobile.css
@@ -289,4 +289,11 @@
         border-radius: 0;
     }
 
+    .swiper__bottom-img {
+        max-width: 484px;
+        width: 100%;
+        max-height: 380px;
+        height: 100%;
+        margin-bottom: 50px;
+    }
 }
