--- a/css/main.css
+++ b/css/main.css
@@ -939,3 +939,106 @@ body {
 #rc-phone.open form {transform:translate(0,0)}
 #rc-phone.open #rc-phone-icon:after {opacity: 1; transform: translate(-50%,-50%) rotate(-360deg);}
 #rc-phone.open #rc-phone-icon:before {opacity: 0; transform: translate(-50%,-50%) rotate(-360deg);}
+
+
+/* cards */
+
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+
+    flex-wrap: wrap;
+}
+
+.card_color {
+   
+    background: var(--yellow);
+    transition: 0.3 all ease;
+
+    
+}
+
+.card {
+    display: block;
+    width: 320px;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 50px;
+
+    
+    transition: 0.3s all ease;
+    overflow: hidden;
+    z-index: 1;
+    
+}
+
+
+.card:hover {
+    transform: scale(1.03);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
+
+.card_icon svg path {
+    transition: 0.3s;
+}
+
+.card:hover .card_icon svg path {
+    
+    fill: var(--yellow);
+}
+
+
+
+.card_icon {
+    display: flex;
+    justify-content: center;
+    height: 80px;
+}
+
+.card_title {
+    display: flex;
+
+    text-align: center;
+    margin: 10px 0 ;
+
+    font-size: 23px;
+
+}
+
+.card_svg {
+    display: flex;
+    margin: auto;
+}
+
+.card_text {
+    margin-top: 20px;
+
+    
+}
+
+.card_ul {
+    list-style: none ;
+    padding: 0;
+    
+}
+
+.card_text {
+    padding-left: 1.3em;
+}
+
+.card_text:before {
+    
+    content: "-";
+    
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--green); /* FontAwesome Unicode */
+    font-family: FontAwesome;
+    margin-left: -10px;
+     
+    
+    width: 10px;
+    height: 10px;
+}
