--- a/css/mobile.css
+++ b/css/mobile.css
@@ -324,6 +324,28 @@
         height: 322px;
         /* margin-bottom: 50px; */
     }
+
+    /* cards */
+
+    .cards {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    /* card */
+    .cards {
+        justify-content: center;
+    }
+
+    .card {
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        padding: 10px;
+    }
+
+    .card_svg {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 400px) {
@@ -342,4 +364,7 @@
         width: 24px;
         margin-left: 10px;
     }
+
+    
+
 }
