--- a/css/mobile.css
+++ b/css/mobile.css
@@ -56,6 +56,23 @@
         font-size: 24px;
     }
 
+    .about__img {
+        width: 100%;
+        max-width: 900px;
+    }
+
+    .about__title {
+        margin-top: 10px;
+    }
+
+    .about__text {
+        margin: 0;
+    }
+
+    .about {
+        margin-bottom: 30px;
+    }
+
     .hero__bottom {
         display: block;
 
@@ -79,6 +96,18 @@
         background-size: 100%;
         background-position: top;
         background-position-y: -100px;
+    }
+
+    .hero__img {
+        background-image: url(../assets/icons/image\ 66.png);
+    
+        width: 100%;
+        height: 360px;
+        background-size: cover;
+        position: absolute;
+        top: 0;
+        z-index: -1;
+        transform: translateY(0px);
     }
 
     .hero__top-buttons {
@@ -111,13 +140,6 @@
         padding: 0;
     }
 
-    .about__img {
-        border-radius: 30px;
-        max-width: 380px;
-        height: 283px;
-        object-fit: cover;
-        transition: 0.3s all ease;
-    }
 
     .mySwiper2 .swiper-slide-next {
         width: 557px;
@@ -212,6 +234,13 @@
         object-fit: contain;
     }
 
+    .swiper-top {
+        padding-bottom: 0;
+    }
+
+    .swiper-slide {
+        padding-bottom: 20px;
+    }
 
     .steps__items {
         columns: 1;
