--- a/css/mobile.css
+++ b/css/mobile.css
@@ -100,7 +100,7 @@
 
     .hero__img {
         background-image: url(../assets/icons/image\ 66.png);
-    
+
         width: 100%;
         height: 360px;
         background-size: cover;
@@ -351,9 +351,31 @@
     .cards {
         justify-content: center;
     }
+
+    .footer__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__wrapper img {
+        margin-left: 0;
+    }
+
+    .footer__list-wrapper {
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+    }
+    
+    .footer__list {
+        margin-left: 0;
+        padding: 0;
+    }
 }
 
 @media screen and (max-width: 600px) {
+
     /* card */
     .cards {
         justify-content: center;
@@ -386,6 +408,6 @@
         margin-left: 10px;
     }
 
-    
+
 
 }
